--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:password@127.0.0.1:3306/db?schema=public"
+JWT_SECRET='abc123'
